--- a/scripts/R05_three_sugars_and_long_term_mice.Rmd
+++ b/scripts/R05_three_sugars_and_long_term_mice.Rmd
@@ -22,15 +22,17 @@ library(scales)
 The tube weight need to be adjusted.    
 
 ```{r}
-three <- read_excel('/Volumes/peledlab/Projects/2024_Angel Rebuttal Exp /Healthy mice Biapenem_Diet_Exp/Angel Rebuttal_Exp2_Healthy mice Diet_Fructose_Sucrose_Glucose_v2.xlsx') %>% 
-  mutate(CFUs_per_GramStool = (((((Colonies_counted*(100/Plated_volume_ul))/100)/(10^Dilution_factor) )*1000)/Stool_weight_mg)+1)  %>% 
-  clean_names() %>% 
-  separate(treatment, into = c('abx_treatment', 'diet_treatment'), sep = '\\+', remove = T) %>% 
-  mutate(diet_treatment = if_else(diet_treatment == 'F','fructose',if_else(diet_treatment == 'G','glucose', if_else(diet_treatment == 'PH','vehicle', 'sucrose'))),
-         abx_treatment = if_else(abx_treatment == 'B','biapenem','DPBS'),
-         #diet_treatment = factor(diet_treatment, levels = c('vehicle','sucrose', 'fructose', 'glucose')),
-         abx_treatment = factor(abx_treatment, levels = c('DPBS','biapenem'))) 
-  
+# three <- read_excel('/Volumes/peledlab/Projects/2024_Angel Rebuttal Exp /Healthy mice Biapenem_Diet_Exp/Angel Rebuttal_Exp2_Healthy mice Diet_Fructose_Sucrose_Glucose_v2.xlsx') %>% 
+#   mutate(CFUs_per_GramStool = (((((Colonies_counted*(100/Plated_volume_ul))/100)/(10^Dilution_factor) )*1000)/Stool_weight_mg)+1)  %>% 
+#   clean_names() %>% 
+#   separate(treatment, into = c('abx_treatment', 'diet_treatment'), sep = '\\+', remove = T) %>% 
+#   mutate(diet_treatment = if_else(diet_treatment == 'F','fructose',if_else(diet_treatment == 'G','glucose', if_else(diet_treatment == 'PH','vehicle', 'sucrose'))),
+#          abx_treatment = if_else(abx_treatment == 'B','biapenem','DPBS'),
+#          #diet_treatment = factor(diet_treatment, levels = c('vehicle','sucrose', 'fructose', 'glucose')),
+#          abx_treatment = factor(abx_treatment, levels = c('DPBS','biapenem'))) 
+# three %>% write_rds('../data/05_cleaned_three_sugars_longtime_mice.RDS')  
+
+three <- read_rds('../data/05_cleaned_three_sugars_longtime_mice.RDS')
   
 three %>% count(abx_treatment, diet_treatment) 
 
@@ -43,22 +45,8 @@ plotdf <- three %>%
 
 plotdf %>% count(xvar)
 ```
+# long time
 
-```{r}
-g3_days <- plotdf %>%    
-  ggboxplot(x = 'xvar', y = 'cf_us_per_gram_stool',add = 'jitter', 
-             xlab = '', ylab = 'Enterococcal\n CFU/gram',, add.params = list(alpha = 0.5, shape = 16),
-            width = 0.6,color  = 'grp')+
-   scale_color_manual(values = c('gray76','#ffbcdc','gold','forestgreen','gray32','deeppink2','yellow','green')) +
-  #stat_compare_means(comparisons = list(c('biapenem__vehicle__3','biapenem__sucrose__3'), c('biapenem__vehicle__6','biapenem__sucrose__6')),label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
-  scale_y_log10(breaks = c(1 %o% 10^(-1:12)),  labels = trans_format("log10", math_format(10^.x))) +
-  #scale_x_discrete(labels=rep(c(0,3,6),4)) + 
-  theme(axis.text =  element_text(size = 10),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/1.3,
-        axis.text.x = element_text(angle = 90))
-
-g3_days
-ggsave('../data/197_three_cfu.pdf', width = 9)
-```
 ```{r}
 # plot 1 : the f3 setting but extend to day 9,14,21
 f3_five <- three %>% 
@@ -79,15 +67,25 @@ f3_five_days <- f3_five %>%
     c('biapenem__vehicle__6','biapenem__sucrose__6'),
     c('biapenem__vehicle__9','biapenem__sucrose__9'),
   c('biapenem__vehicle__14','biapenem__sucrose__14'),
-  c('biapenem__vehicle__21','biapenem__sucrose__21')),
-    label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
-  scale_y_log10(breaks = c(1 %o% 10^(-1:12)),  labels = trans_format("log10", math_format(10^.x))) +
-  #scale_x_discrete(labels=rep(c(0,3,6,9,14,21),4)) + 
-  theme(axis.text =  element_text(size = 10),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/1.3,
-        axis.text.x = element_text(angle = 90))
+  c('biapenem__vehicle__21','biapenem__sucrose__21'),
+   c('biapenem__vehicle__3','DPBS__vehicle__3'), 
+    c('biapenem__vehicle__6','DPBS__vehicle__6'),
+    c('biapenem__vehicle__9','DPBS__vehicle__9'),
+  c('biapenem__vehicle__14','DPBS__vehicle__14'),
+  c('biapenem__vehicle__21','DPBS__vehicle__21')
+  ),
+    label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T, step.increase = 0.2, label.size = 1) +
+  scale_y_log10(breaks = c(1 %o% 10^(-1:8)),  labels = trans_format("log10", math_format(10^.x))) +
+  scale_x_discrete(labels=rep(c(0,3,6,9,14,21),4)) + 
+  theme_light() +
+  theme(axis.text =  element_text(size = 10),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/3)
+f3_five_days %>% write_rds('../data/05_f3_five_days.RDS')
 f3_five_days
-f3_five %>% count(xvar)
 ```
+
+
+# three sugars
+
 ```{r}
 # plot 2: three total sugars but only day 0,3,6
 f3_sugars <- three %>% 
@@ -101,10 +99,12 @@ f3_sugars %>% count(grp)
 
 
 f3_sugars_days <- f3_sugars %>%    
+  # remove three mice that have NA in the cfu counts cuz "mouse died extensive diarrhea"
+  filter(!is.na(cf_us_per_gram_stool)) %>% 
   ggboxplot(x = 'xvar', y = 'cf_us_per_gram_stool',add = 'jitter', 
              xlab = '', ylab = 'Enterococcal\n CFU/gram',, add.params = list(alpha = 0.5, shape = 16),
             width = 0.6,color  = 'grp')+
-   scale_color_manual(values = c('gray76','#ffbcdc','gold','forestgreen','gray32','deeppink2','yellow','green')) +
+   scale_color_manual(values = c('gray76','#ffbcdc','burlywood2','palegreen2','gray32','deeppink2','burlywood4','palegreen4')) +
   stat_compare_means(comparisons = list(
     c('biapenem__vehicle__3','biapenem__sucrose__3'), 
     c('biapenem__vehicle__6','biapenem__sucrose__6'),
@@ -114,13 +114,13 @@ f3_sugars_days <- f3_sugars %>%
     c('biapenem__vehicle__6','biapenem__fructose__6')
     
     ),
-    label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
-  scale_y_log10(breaks = c(1 %o% 10^(-1:12)),  labels = trans_format("log10", math_format(10^.x))) +
-  #scale_x_discrete(labels=rep(c(0,3,6),8)) + 
-  theme(axis.text =  element_text(size = 10),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/1.3,
-        axis.text.x = element_text(angle = 90))
-
+    label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T, step.increase = 0.2) +
+  scale_y_log10(breaks = c(1 %o% 10^(-1:8)),  labels = trans_format("log10", math_format(10^.x))) +
+  scale_x_discrete(labels=rep(c(0,3,6),8)) + 
+  theme_light() +
+  theme(axis.text =  element_text(size = 10),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/3)
 f3_sugars_days
+f3_sugars_days %>% write_rds('../data/05_f3_sugars_days.RDS')
 ```
 
 ```{r}
