--- a/scripts/R07_no_fiber_diet_CFU.Rmd
+++ b/scripts/R07_no_fiber_diet_CFU.Rmd
@@ -15,6 +15,7 @@ library(readxl)
 library(janitor)
 library(scales)
 library(ggrepel)
+library(cowplot)
 ```
 B+S  (Biapenem + Sucrose) PS (PBS + Sucrose) BP (Biapenem +Plain Hydrogel) and PP (PBS + Plain Hydrogel)
 
@@ -31,9 +32,12 @@ nofiber <- read_csv('../data/R07_no_fiber_experiment_data_CFU.csv') %>%
          abx_treatment = if_else(str_detect(treatment, '^B'), 'biapenem','DPBS') ,
          diet_treatment = if_else(str_detect(treatment, 'S$'), 'sucrose', 'vehicle'),
          diet_treatment = factor(diet_treatment, levels = c('vehicle','sucrose')),
-         abx_treatment = factor(abx_treatment, levels = c('DPBS','biapenem')))
+         abx_treatment = factor(abx_treatment, levels = c('DPBS','biapenem'))) %>% 
+  select(experiment:treatment, CFUs_per_GramStool:diet_treatment) %>% 
+  mutate(logcfu = log10(CFUs_per_GramStool)) 
 #nofiber %>% distinct(treatment, abx_treatment, diet_treatment)
 nofiber %>% distinct(day)
+nofiber %>% write_csv('../data/07_nofiber.csv')
 
 plotdf <- nofiber %>% 
   mutate(day = factor(day)) %>% 
@@ -43,22 +47,57 @@ plotdf <- nofiber %>%
   mutate(grp = factor(grp, levels = c('DPBS__vehicle','DPBS__sucrose','biapenem__vehicle','biapenem__sucrose')))
 ```
 
-
 ```{r}
+# test if the logcfu follow normality
+nofiber %>% 
+  split(list(.$day, .$abx_treatment, .$diet_treatment)) %>% 
+  map(function(df){
+    shapiro.test(x = df$logcfu)
+  })
+```
+
+# nofiber days
+
+```{r} 
 nofiber_days <- plotdf %>%    
-  ggboxplot(x = 'xvar', y = 'CFUs_per_GramStool',add = 'jitter', xlab = '', 
-            ylab = 'Enterococcal\n CFU/gram',, add.params = list(alpha = 0.5, shape = 16),
+  ggboxplot(x = 'xvar', y = 'logcfu',add = 'jitter', xlab = '', 
+            ylab = 'Enterococcal\n CFU/gram log10 transformed',, add.params = list(alpha = 0.5, shape = 16),
             width = 0.6,color  = 'grp')+
    scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2')) +
-  stat_compare_means(comparisons = list(c('biapenem__vehicle__3','biapenem__sucrose__3'), c('biapenem__vehicle__6','biapenem__sucrose__6'), c('biapenem__vehicle__9','biapenem__sucrose__9')),
-                     #label= "p.signif", 
-                     method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
-  scale_y_log10(breaks = c(1 %o% 10^(-1:12)),  labels = trans_format("log10", math_format(10^.x))) +
-  #scale_x_discrete(labels=rep(c(0,3,6,9),4)) + 
-  theme(axis.text =  element_text(size = 10, angle = 45, hjust = 1),
-        axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/1.3)
+  stat_compare_means(comparisons = list(c('biapenem__vehicle__3','biapenem__sucrose__3'),  c('biapenem__vehicle__9','biapenem__sucrose__9')),
+                     label= "p.signif", 
+                     method= 't.test',tip.length = 0.015,exact=T,correct=T, step.increase = 0.1) +
+  #scale_y_log10(breaks = c(1 %o% 10^(-1:12)),  labels = trans_format("log10", math_format(10^.x))) +
+  scale_x_discrete(labels=rep(c(0,3,6,9),4)) + 
+  theme_light() +
+  theme(axis.text.x =  element_text(size = 10),
+        axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/3)
+
 nofiber_days
+
+nofiber_days %>% write_rds('../data/07_nofiber_days.RDS')
+   
+# compare the delta of the day 3 to 0, day 6 and 0. 
+       
 ```
+
+```{r}
+# Assuming your data is in a dataframe called 'data_abx' (for antibiotic-treated mice)
+data_abx <- plotdf %>% 
+  filter(abx_treatment == 'biapenem') %>% 
+  mutate(logCFU = log10(CFUs_per_GramStool))
+
+model <- aov(logCFU ~ diet_treatment * day + Error(mouse_identifier/day), data = data_abx)
+summary(model)  # Check for significance of the interaction term
+
+# If the interaction is significant, proceed with post-hoc tests
+library(emmeans)
+emmeans(model, pairwise ~ diet_treatment | day)  # Example using emmeans for pairwise comparisons
+
+# Day 9:  Significant difference (p = 0.0036) with a negative estimate (-1.65).  This clearly shows that the vehicle group has significantly lower Enterococcus counts than the sucrose group on day 9.  This confirms the interaction effect and provides strong evidence that the sucrose diet promotes Enterococcus colonization in the longer term after antibiotic treatment.
+```
+
+
 ```{r}
 # the trapezpid auc
 dat_entero <- plotdf %>% 
@@ -111,36 +150,76 @@ d9 <- wilcox.test(CFUs_per_GramStool ~ treatment, data = nofiber %>% filter(day 
 d9
 ```
 
+
+
+
+
 ```{r}
-# to calculate the fold change
-deltas <- nofiber %>%
-  select(abx_treatment, diet_treatment, day, mouse_identifier, CFUs_per_GramStool) %>% 
-  spread('diet_treatment','CFUs_per_GramStool') 
+# to do a test looking at the difference between day 0 and 3/6/9
+differences <- dat_entero_wide %>% 
+  mutate(delta_3_0 = day3 - day0,
+         delta_6_0 = day6 - day0,
+         delta_9_0 = day9 - day0) %>% 
+  select(diet_treatment:mouse_identifier, delta_3_0:delta_9_0 ) %>% 
+  gather('grp','deltas', delta_3_0:delta_9_0)
+  
+
+# differences %>% 
+#   ggboxplot(x = 'diet_treatment', y = 'deltas', add = 'jitter', add.params = list(color = 'mouse_identifier')) +
+#   facet_grid(abx_treatment ~ grp) +
+#   stat_compare_means(comparisons = list(c('vehicle','sucrose')), method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
+#   scale_y_log10() +
+#   theme(aspect.ratio = 1) 
+  
+
+```
+# Final mouse graph
+
+```{r}
+library(cowplot)
+nofiber <- read_rds('../data/07_nofiber_days.RDS')
+chow <- read_rds('../data/08_chow_days.RDS')
+chow_auc <- read_rds('../data/08_chow_auc.RDS')
+glucose <- read_rds('../data/05_f3_sugars_days.RDS')
+long <- read_rds('../data/05_f3_five_days.RDS')
+transplant <- read_rds('../data/02_transplant_CFU_plot.RDS')
+
+
+title <- ggdraw() + 
+  draw_label(
+    "Fig. S_X",
+    fontface = 'bold',
+    x = 0,
+    hjust = 0
+  ) +
+  theme(
+    plot.margin = margin(0, 0, 0, 5)
+  )  
 ```
 
+# run
 
 ```{r}
-# wanna calculate the fold change between sucrose and vehicle in either abx or dpbs group on either 3,6, or 9.
-su_ve_fc_df <- deltas %>% 
-  split(list(.$day, .$abx_treatment)) %>% 
-  map_dfr(function(df, name_){
-    ret = df %>% mutate(su_ve_fc = round(sucrose/vehicle, 2))
-    return(ret)
-  }) %>% 
-  mutate(su_ve_fc_log10 = log10(su_ve_fc)) 
-```
+# the hjust is to adjust the position of the label A, B....
+chowones <- plot_grid(chow,chow_auc, 
+                 label_size = 12, ncol = 2, labels = c('A','B'), hjust = 3.7,
+                align = 'vh', axis = 'lrtb', rel_widths = c(2,1.2))
 
+S_mouse1 <- plot_grid(chowones, NA, nofiber, NA, glucose,NA, long,
+                  rel_heights = c(1,-0.2, 1, 0.1, 1, 0.3, 1),
+                  hjust = -1.9,
+                 label_size = 12, ncol = 1,labels = c(NA,'C','D','E'),
+                align = 'vh', axis = 'lrtb')
 
-```{r}
-su_ve_fc_df %>% 
-  ggplot() +
-  geom_boxplot(aes(x =abx_treatment, y = su_ve_fc_log10)) +
-  geom_point(aes(x =abx_treatment, y = su_ve_fc_log10, color = mouse_identifier)) +
-  geom_text_repel(aes(x =abx_treatment, y = su_ve_fc_log10, label = mouse_identifier, color = mouse_identifier)) +
-  facet_grid(. ~ day) +
-  #theme_cleveland() +
-  labs(y  = 'log10(sucrose/vehicle fold change)') +
-  theme(aspect.ratio = 1)
-ggsave('../data/R07_fold_change.jpg', width = 12, height = 10)
+ 
+combined <- plot_grid(
+  title, S_mouse1,
+  ncol = 1,
+  # rel_heights values control vertical title margins
+  rel_heights = c(0.05, 1)
+)+theme(plot.margin = unit(c(1,1,1,1), "cm"))
+
+ggsave('../data/07_diet_mice.pdf',
+      width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)   
 ```
 
