--- a/scripts/R02_GVHD_mice_16s_zymo.Rmd
+++ b/scripts/R02_GVHD_mice_16s_zymo.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(tidyverse)
+library(scales)
 library(ggpubr)
 library(janitor)
 library(Maaslin2)
@@ -67,40 +68,79 @@ abso <- read_csv('../data/absolute.abundance.csv') %>%
 
 ```{r}
 # stack the CFU counts and the relab together
-two <- bind_rows(
-  gvhd_counts %>% 
-    select(sampleid, day_relative_to_transplant, log_cf_us_per_gram_stool,abx_treatment:gvhd_grp) %>% 
-    mutate(type = 'CFU') %>% 
-    rename(value = log_cf_us_per_gram_stool) %>% 
-    filter(!is.na(sampleid)),
-  gvhdall %>% 
-    filter(str_detect(Taxon, 'g__Enterococc')) %>% 
-    select(sampleid,day_relative_to_transplant,relab,  abx_treatment:gvhd_grp)%>% 
-    group_by(sampleid, day_relative_to_transplant,abx_treatment, diet_treatment, gvhd_grp) %>% 
-    summarise(entero_relab = sum(relab)) %>% 
-    mutate(type = 'entero_relab')%>% 
-    rename(value = entero_relab),
-  abso %>% 
-    select(sampleid,day_relative_to_transplant, value, abx_treatment:gvhd_grp, type)
-) %>% 
-  filter(day_relative_to_transplant != 9) %>% 
-  arrange(abx_treatment,desc(diet_treatment),  day_relative_to_transplant) %>% 
-  mutate(xvar = str_glue('{abx_treatment}__{diet_treatment}__{day_relative_to_transplant}')) %>% 
-  mutate(grp = str_glue('{abx_treatment}__{diet_treatment}')) %>% 
-  mutate(grp = factor(grp, levels = c('PBS__vehicle','PBS__sucrose','biapenem__vehicle','biapenem__sucrose'))) %>% 
-  mutate(type = factor(type , levels = c('CFU','log10_abs_copy','entero_relab')))
+# two <- bind_rows(
+#   gvhd_counts %>% 
+#     select(sampleid, day_relative_to_transplant, log_cf_us_per_gram_stool,abx_treatment:gvhd_grp) %>% 
+#     mutate(type = 'CFU') %>% 
+#     rename(value = log_cf_us_per_gram_stool) %>% 
+#     filter(!is.na(sampleid)),
+#   gvhdall %>% 
+#     filter(str_detect(Taxon, 'g__Enterococc')) %>% 
+#     select(sampleid,day_relative_to_transplant,relab,  abx_treatment:gvhd_grp)%>% 
+#     group_by(sampleid, day_relative_to_transplant,abx_treatment, diet_treatment, gvhd_grp) %>% 
+#     summarise(entero_relab = sum(relab)) %>% 
+#     mutate(type = 'entero_relab')%>% 
+#     rename(value = entero_relab),
+#   abso %>% 
+#     select(sampleid,day_relative_to_transplant, value, abx_treatment:gvhd_grp, type)
+# ) %>% 
+#   filter(day_relative_to_transplant != 9) %>% 
+#   arrange(abx_treatment,desc(diet_treatment),  day_relative_to_transplant) %>% 
+#   mutate(xvar = str_glue('{abx_treatment}__{diet_treatment}__{day_relative_to_transplant}')) %>% 
+#   mutate(grp = str_glue('{abx_treatment}__{diet_treatment}')) %>% 
+#   mutate(grp = factor(grp, levels = c('PBS__vehicle','PBS__sucrose','biapenem__vehicle','biapenem__sucrose'))) %>% 
+#   mutate(type = factor(type , levels = c('CFU','log10_abs_copy','entero_relab')))
   
-
-two %>% 
-  ggboxplot(x = 'xvar', y = 'value',add = 'jitter', 
-             xlab = '', ylab = 'value',, add.params = list(alpha = 0.5, shape = 16),
-            width = 0.6,color  = 'grp') +
-  #scale_y_sqrt() +
-  facet_grid(type~ gvhd_grp, scales = 'free')+ 
-   scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2'))+
-  theme_light() +
-  theme(axis.text =  element_text(size = 10, angle = 45, hjust = 1),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/3)
+# 
+# two %>% 
+#   ggboxplot(x = 'xvar', y = 'value',add = 'jitter', 
+#              xlab = '', ylab = 'value',, add.params = list(alpha = 0.5, shape = 16),
+#             width = 0.6,color  = 'grp') +
+#   #scale_y_sqrt() +
+#   facet_grid(type~ gvhd_grp, scales = 'free')+ 
+#    scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2'))+
+#   theme_light() +
+#   theme(axis.text =  element_text(size = 10, angle = 45, hjust = 1),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/3)
 ```
+
+# transplant_CFU_plot
+
+```{r}
+# only include the CFU of the BM only and BMT results, since the day 4 of the abx + vehicle looks weird
+# also include the day 9 of the CFU data
+transplant_CFU <- gvhd_counts %>% 
+    select( day_relative_to_transplant, cf_us_per_gram_stool,abx_treatment:gvhd_grp) %>% 
+  filter(!is.na(cf_us_per_gram_stool)) %>% 
+  arrange(gvhd_grp, abx_treatment,desc(diet_treatment),  day_relative_to_transplant) %>% 
+  mutate(xvar = str_glue('{gvhd_grp}__{abx_treatment}__{diet_treatment}__{day_relative_to_transplant}')) %>% 
+  mutate(grp = str_glue('{gvhd_grp}__{abx_treatment}__{diet_treatment}')) %>% 
+  mutate(grp = factor(grp, levels = c('BM+Tcells__PBS__vehicle','BM+Tcells__PBS__sucrose','BM+Tcells__biapenem__vehicle','BM+Tcells__biapenem__sucrose','BMonly__PBS__vehicle','BMonly__PBS__sucrose','BMonly__biapenem__vehicle','BMonly__biapenem__sucrose')))
+
+transplant_CFU_plot <- transplant_CFU %>% 
+  ggboxplot(x = 'xvar', y = 'cf_us_per_gram_stool',add = 'jitter', 
+             xlab = '', ylab = 'Enterococcal\n CFU/gram', add.params = list(alpha = 0.5, shape = 16),
+            width = 0.6,color  = 'grp') +
+  scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2', 'gray76','#ffbcdc','gray32','deeppink2'))+
+  scale_y_log10(breaks = c(1 %o% 10^(-1:8)),  labels = trans_format("log10", math_format(10^.x))) +
+  stat_compare_means(comparisons = list(
+    c('BM+Tcells__PBS__vehicle__0','BM+Tcells__PBS__vehicle__9'), 
+    #c('BMonly__PBS__vehicle__0','BMonly__PBS__vehicle__9'),
+    c('BM+Tcells__PBS__vehicle__4','BM+Tcells__biapenem__vehicle__4'), 
+    c('BM+Tcells__biapenem__vehicle__4','BM+Tcells__biapenem__sucrose__4'),
+    c('BMonly__PBS__vehicle__4','BMonly__PBS__sucrose__4'), 
+    c('BMonly__PBS__vehicle__4','BMonly__biapenem__vehicle__4'),
+    c('BMonly__biapenem__vehicle__6','BMonly__biapenem__sucrose__6'),
+     c('BMonly__biapenem__vehicle__9','BMonly__biapenem__sucrose__9')
+    
+    ),
+    label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T, step.increase = 0.2) +
+  theme_light() +
+  scale_x_discrete(labels=c(0,4,6,9,0,4,6,0,4,6,9,0,4,6,9,0,4,6,9,0,4,6,9,0,4,6,9,0,4,6,9)) + 
+  theme(axis.text.x =  element_text(size = 10),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/2.8)
+transplant_CFU_plot
+transplant_CFU_plot %>% write_rds('../data/02_transplant_CFU_plot.RDS')
+```
+
 
 ```{r}
 # to make them three different columns and do a pairwise correlation
@@ -110,19 +150,19 @@ threecols <- two %>%
 ```
 
 ```{r}
-threecols %>% 
-  ggscatter(x = 'CFU', y = 'log10_abs_copy', color = 'day_relative_to_transplant', xlab = 'log10 (CFU)') +
-  geom_abline(slope = 1, intercept = 0)
+# threecols %>% 
+#   ggscatter(x = 'CFU', y = 'log10_abs_copy', color = 'day_relative_to_transplant', xlab = 'log10 (CFU)') +
+#   geom_abline(slope = 1, intercept = 0)
 ```
 ```{r}
-threecols %>% 
-  ggscatter(x = 'CFU', y = 'entero_relab', color = 'day_relative_to_transplant') +
-  geom_abline(slope = 1, intercept = 0)
+# threecols %>% 
+#   ggscatter(x = 'CFU', y = 'entero_relab', color = 'day_relative_to_transplant') +
+#   geom_abline(slope = 1, intercept = 0)
 ```
 ```{r}
-threecols %>% 
-  ggscatter(x = 'log10_abscopy', y = 'entero_relab', color = 'day_relative_to_transplant') +
-  geom_abline(slope = 1, intercept = 0)
+# threecols %>% 
+#   ggscatter(x = 'log10_abscopy', y = 'entero_relab', color = 'day_relative_to_transplant') +
+#   geom_abline(slope = 1, intercept = 0)
 ```
 
 
