Good good F2 is turning to the shape I want

--- a/scripts/176_F2_bottom.Rmd
+++ b/scripts/176_F2_bottom.Rmd
@@ -19,7 +19,7 @@ axis_title_size <- 10
 META <- read_csv('../data/153_combined_META.csv')
 ```
 
-# fg panel
+## 2D
 
 ```{r}
 macro <- read_csv('../data/090_model_alpha_macro_fat_post_interaction.csv')
@@ -113,6 +113,7 @@ blue_terms <- tibble(
          blue_fill = 'blue_fill')
 ```
 
+### plot
 
 ```{r}
 cross0 <- cleaned_fg %>%
@@ -127,7 +128,7 @@ fg_temporal <- cleaned_fg %>%
   mutate(shortname = factor(shortname, levels = fg_label$ord)) %>% 
   left_join(cross0) %>% 
   ggplot() +
-   stat_pointinterval(aes(x = coeff, y = shortname, col = Cross), .width = c(.66, .95), fatten_point = 1.2) +
+   stat_pointinterval(aes(x = coeff, y = shortname, col = Cross), .width = .95, fatten_point = 1.2) +
   geom_rect(data = interaction_terms, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = interaction_fill), alpha = .1) +
   geom_rect(data = blue_terms, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = blue_fill) , alpha = .1) +
   scale_fill_manual(values=c("interaction_fill" = "lightblue", "blue_fill" = "royalblue")) +
@@ -164,6 +165,17 @@ ggsave('../data/f2c_176.pdf',
       plot = fg_pt, 
       dpi = 300)
 ```
+```{r}
+# the credible interval for the intensity
+cleaned_fg %>% 
+  filter(grp == 'patient') %>% 
+  mutate(shortname = factor(shortname, levels = c('Nonablative','Reduced','Ablative'))) %>% 
+  group_by(item) %>% 
+  tidybayes::median_qi(coeff , .width = c(.95)) %>% 
+  mutate(coeff = round(coeff, digits = 2), 
+         .lower = round(.lower, digits = 2), 
+         .upper = round(.upper, digits = 2) )
+```
 
 
 ```{r fg_pt} 
@@ -174,7 +186,7 @@ fg_side <-  plot_grid(fg_temporal,NA,
 fg_side
 ```
 
-# macro panel
+# 2E
 
 ```{r}
 # order the macro panel
@@ -235,7 +247,7 @@ cleaned_macro %>% filter(str_detect(shortname, 'abx')) %>%
 ```
  
 
- 
+### plot
  
 ```{r}
 interaction_terms_macro <- tibble(
@@ -261,11 +273,11 @@ macro_temporal <- cleaned_macro %>%
   mutate(shortname = factor(shortname, levels = macro_order$shortname)) %>% 
   left_join(cross0_macro)  %>% 
   ggplot() +
-  stat_pointinterval(aes(x = coeff, y = shortname, col = Cross),.width = c(.66, .95), fatten_point = 1.2) +
+  stat_pointinterval(aes(x = coeff, y = shortname, col = Cross),.width = .95, fatten_point = 1.2) +
  geom_rect(data = interaction_terms_macro, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = interaction_fill), alpha = .1) +
   geom_rect(data = blue_terms_macro, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = blue_fill) , alpha = .1) +
   scale_fill_manual(values=c("interaction_fill" = "lightblue", "blue_fill" = "royalblue")) +
-  geom_vline(xintercept = 0, col = 'black', linetype = 'dashed') +
+  geom_vline(xintercept = 0, col = 'blue', linetype = 'dashed') +
   labs(x = 'ln(diversity) change', y = '') +
   theme_classic() +
   theme(legend.position = 'none') +
@@ -296,10 +308,6 @@ macro_pt <- cleaned_macro %>%
         aspect.ratio=1.4)
 macro_pt
 
-ggsave('../data/f2c_176.pdf',
-      width = 50, height = 100, units = "mm", device = 'pdf', 
-      plot = macro_pt, 
-      dpi = 300)
 ```
 
 
@@ -310,7 +318,9 @@ macro_side <-  plot_grid(macro_pt,NA, macro_temporal,
                  ncol = 1 )
 macro_side   
 ```
-# the top part of the F2
+
+
+## 2A
 
 ```{r f2a}
 twoscore <- read_csv('../data/086_twoscore_procrustes.csv') 
@@ -339,6 +349,8 @@ ggsave('../data/f2a_176.pdf',
 ```
 
 
+## 2B
+
 ```{r diagram}
 p <- '../data/cartoon_of_model.png'
 diagram <- ggdraw() +
@@ -366,8 +378,9 @@ conditional <- read_csv('../data/173_conditional_data.csv') %>%
 palette <- wes_palette("Royal1", 2)
 # the color for the strip background
 strip_color <- wes_palette("Royal1", 3)[3]
-```
+``` 
 
+## 2G condi fg
 
 ```{r conditional9}      
 conditional9 <- conditional %>%   
@@ -383,15 +396,35 @@ conditional9 <- conditional %>%
   theme_classic() +
   theme(legend.position = 'none', legend.title = element_text(size = 8, face="bold"),
         legend.text = element_text( size=8, face="bold"),
-        #legend.background = element_rect(fill="white",size=0.2, linetype="solid"),
+        panel.background = element_rect(fill = "#FAEFD140"),
         legend.background=element_rect(fill = alpha("white", 0)),
        legend.key=element_rect(fill = alpha("white", 0)),
-        aspect.ratio = 1, 
+        aspect.ratio = 1/1.5, 
         strip.background = element_rect(color="white", fill=strip_color, size=1.5,linetype="solid"),
      axis.text=element_text(size=8), axis.title=element_text(size=axis_text_size))    +
   guides(fill = guide_legend(direction = "vertical"), color = guide_legend(direction = "vertical"))
-conditional9    
+#conditional9          
+``` 
+
+## 2H condi macro
+
+```{r}
+conditional3 <- read_rds('../data/090_conditional3.RDS')
 ```
+
+## condiall
+
+```{r}
+# put the conditional for the fg and macronutrients together
+condiall <- plot_grid(conditional9, conditional3,
+                      labels = c('G', 'H'),label_y = 1,
+                align = 'h',axis = 'l', rel_heights = c(2,1.1),
+                  ncol = 1)
+condiall   
+```
+
+
+## 2F
 
 ```{r raw_sweets}
 # the raw data 
@@ -406,14 +439,14 @@ rawsweets <- META %>%
            add.params = list(color = 'antibiotics', fill = 'antibiotics', alpha = 0.3, size = 1.5), # Customize line
            conf.int = TRUE, # Add confidence interval
            cor.coef = TRUE, # Add correlation coefficient.
-           cor.coeff.args = list(method = "spearman",  label.sep = " \\n", cor.coef.name = c("rho"),p.accuracy = 0.01, r.accuracy = 0.01,label.x.npc = "left", label.y.npc = "bottom", size = 3.5)) +
+           cor.coeff.args = list(method = "spearman",  label.sep = "\n", cor.coef.name = c("rho"),p.accuracy = 0.01, r.accuracy = 0.01,label.x.npc = "left", label.y.npc = "bottom", size = 3.5)) +
   scale_x_sqrt() +
   scale_y_sqrt() +
   scale_fill_manual('antibiotics', values = palette, labels=c('not exposed', 'exposed')) +
   scale_colour_manual('antibiotics',values = palette, labels=c('not exposed', 'exposed')) +
-  facet_wrap(~ antibiotics, labeller = 'label_both', dir = 'v') +
+  facet_wrap(~ antibiotics, labeller = 'label_both', dir = 'h') +
   theme(aspect.ratio = 1, 
-        #legend.position = 'none',
+        legend.position = 'none',
           strip.background = element_blank(),
         strip.text.x = element_blank(), 
      axis.text=element_text(size=8), axis.title=element_text(size=8)) 
@@ -426,7 +459,6 @@ rawsweets
 META %>% 
   count(empirical)
 ```
-
 
 ```{r}
 # number of patients
@@ -461,55 +493,45 @@ forlegend <- conditional %>%
   guides(fill = guide_legend(direction = "vertical"), color = guide_legend(direction = "vertical"))
 ```
 
-# assemble all parts of F2  
+# Final F2    
 
 ```{r}
 title <- ggdraw() + 
-  draw_label(
-    "Fig. 2",
-    fontface = 'bold',
-    x = 0,
-    hjust = 0
-  ) +
-  theme(
-    plot.margin = margin(0, 0, 0, 7)
-  )
+  draw_label("Fig. 2",fontface = 'bold',
+    x = 0,hjust = 0 ) +
+  theme( plot.margin = margin(0, 0, 0, 5))
 
-left <- plot_grid(f2a, NA, macro_side,
-                  labels = c('A', NA, NA),label_y = 1,
-                rel_heights = c(1,-.25, 3.2),
+f2_top <-  plot_grid(f2a,diagram,NA,
+                     labels = c('A','B', 'C'),
+                rel_widths = c(0.6,1.2, 0.5),
+                 nrow = 1)
+
+middle_right <-  plot_grid(macro_temporal,NA, rawsweets,
+                labels = c('E',NA, 'F'),label_y = .8,
+                rel_heights = c(1,0,.6),
                   ncol = 1) 
 
-right <- plot_grid(diagram,NA, fg_side,
-                labels = c('B',NA, 'E'),label_y = .8,
-                rel_heights = c(1,-.45,5),
-                  ncol = 1)
+middle_row <- plot_grid(fg_temporal,middle_right,
+                rel_widths = c(1,1),labels = c('D',NA),
+                 nrow = 1)  
 
-f2_top <-  plot_grid(left,right,
-                rel_widths = c(1,1.2),
-                 nrow = 1)
-```
-
-```{r}
 # the legend for the panels 3*3 
 legend9 <- get_legend(forlegend)   
-bottom_left <- plot_grid(rawsweets, legend9, 
-                         ncol = 1, rel_heights = c(3,1), labels = c('F','G'))
 
 # combine the bottom left and the grid panels
-f2_bottom <- plot_grid(bottom_left,conditional9, rel_widths = c(1,4 ) )
+f2_bottom <- condiall
 
-f2 <- plot_grid(f2_top,NA, f2_bottom,
-                rel_heights = c(1,-0.09, .6),
+f2 <- plot_grid(f2_top,middle_row, f2_bottom,
+                rel_heights = c(.7,1.6, 1.7),
                 align = 'hv',axis = 'lrtb',
                  ncol = 1)
-  
+   
 combined <- plot_grid(
   title, f2,
   ncol = 1,
   # rel_heights values control vertical title margins
   rel_heights = c(0.1, 1)
-) +theme(plot.margin = unit(c(1,2,1,1), "cm"))
+) +theme(plot.margin = unit(c(1,1,1,1), "cm"))
 
 ggsave('../data/F2_model_results_176.pdf',
       width = 210, height = 297, units = "mm", device = 'pdf', 
